--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <tr>
                         <th scope="col">Description</th>
                         <th scope="col">Quantity</th>
+                        <th scope="col">Unit</th>
                         <th scope="col">Unit Price</th>
                         <th scope="col">Total</th>
                         <th scope="col">Action</th>
